deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: auto-remediation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auto-remediation
  template:
    metadata:
      labels:
        app: auto-remediation
    spec:
      containers:
      - name: auto-remediation
        imag: auto-remediation:v1
        ports:
        - containerPort: 8080
