service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-remediation-service
spec:
  type: NodePort
  selector:
    app: auto-remediation
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
